--- a/InstagramViewer/app/src/main/res/layout/activity_photos.xml
+++ b/InstagramViewer/app/src/main/res/layout/activity_photos.xml
@@ -1,8 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PhotosActivity">
+
+<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/ptr_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
 
     <ListView
         android:layout_width="wrap_content"
@@ -15,4 +16,4 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="false" />
 
-</RelativeLayout>
+</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
