--- a/SimpleTwitterClient/app/src/main/res/layout/activity_timeline.xml
+++ b/SimpleTwitterClient/app/src/main/res/layout/activity_timeline.xml
@@ -5,14 +5,14 @@
     android:padding="6dp"
     tools:context="com.codepath.apps.basictwitter.activities.TimelineActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvTweets"
-        android:layout_alignParentTop="true"
+
+    <FrameLayout
+        android:id="@+id/flContainer"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true">
+
+    </FrameLayout>
 </RelativeLayout>
