--- a/SimpleTwitterClient/app/src/main/res/menu/timeline.xml
+++ b/SimpleTwitterClient/app/src/main/res/menu/timeline.xml
@@ -4,6 +4,13 @@
     <item android:id="@+id/action_compose"
         android:orderInCategory="5"
         android:title="Compose"
+        android:onClick="onComposeTweet"
         android:icon="@drawable/ic_compose_tweet"
+        android:showAsAction="always" />
+    <item android:id="@+id/user_profile"
+        android:orderInCategory="5"
+        android:title="Profile"
+        android:onClick="onUserProfile"
+        android:icon="@drawable/ic_user_profile"
         android:showAsAction="always" />
 </menu>
