--- a/SimpleTwitterClient/app/src/main/res/values/styles.xml
+++ b/SimpleTwitterClient/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarTabTextStyle">@style/MyActionBarTabText</item>
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
@@ -25,4 +26,10 @@
     <style name="AppTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.StatusBar.Title">
         <item name="android:textColor">#FFFFFF</item>
     </style>
+
+    <style name="MyActionBarTabText"
+        parent="@android:style/Widget.Holo.Light.ActionBar.TabText">
+        <item name="android:textColor">#31ABDE</item>
+    </style>
+
 </resources>
