--- a/SimpleTwitterClient/app/src/main/res/layout/fragment_profile.xml
+++ b/SimpleTwitterClient/app/src/main/res/layout/fragment_profile.xml
@@ -48,6 +48,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
+            android:id="@+id/tvTweets" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:text="New Text"
             android:id="@+id/tvFollowers" />
 
         <TextView
