--- a/SimpleTwitterClient/app/src/main/res/layout/fragment_tweets_list.xml
+++ b/SimpleTwitterClient/app/src/main/res/layout/fragment_tweets_list.xml
@@ -12,6 +12,11 @@
         android:id="@+id/progressBar"
         android:layout_gravity="center_horizontal" />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,4 +27,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
