--- a/VisionDemo/app/src/main/res/layout/activity_main.xml
+++ b/VisionDemo/app/src/main/res/layout/activity_main.xml
@@ -7,48 +7,87 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
+    <RelativeLayout
+        android:id="@+id/rlMain"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/background"
+        android:paddingTop="50dp"
+        android:paddingBottom="30dp"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="100dp"
+            android:layout_alignParentLeft="true">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_checkleft"
+                android:id="@+id/imgExamLeft"
+                android:onClick="onExamLeft"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Left"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="100dp"
+            android:layout_alignParentRight="true">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_checkright"
+                android:id="@+id/imgExamRight"
+                android:onClick="onExamRight"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Right"/>
+        </LinearLayout>
+    </RelativeLayout>
 
 
     <TextView
         android:text="@string/vision_field_demo"
+        android:layout_alignTop="@id/rlMain"
+        android:paddingLeft="10dp"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold|italic"
+        android:id="@+id/tvDemo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"/>
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="100dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exam_left"
-            android:id="@+id/btnExamLeft"
-            android:layout_alignParentLeft="true"
-            android:onClick="onExamLeft" />
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exam_right"
-            android:id="@+id/btnExamRight"
-            android:layout_alignParentRight="true"
-            android:onClick="onExamRight" />
-    </RelativeLayout>
-
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/config"
-        android:id="@+id/btnConfig"
+        android:src="@drawable/configuration"
+        android:onClick="onConfig"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="onConfig" />
+        android:paddingLeft="30dp"
+        android:layout_alignParentLeft="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/results"
+        android:onClick="onResult"
+        android:layout_alignParentBottom="true"
+        android:paddingRight="30dp"
+        android:layout_alignParentRight="true"/>
+
+
 </RelativeLayout>
