--- a/VisionDemo/app/src/main/res/layout/activity_result_details.xml
+++ b/VisionDemo/app/src/main/res/layout/activity_result_details.xml
@@ -1,18 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.vvavy.visiondemo.activity.ExamActivity">
-
-    <FrameLayout
-        android:id="@+id/frmResult"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </FrameLayout>
-
+    <!--ScrollView
+        android:id="@+id/svResult"
+        android:layout_width="3000dp"
+        android:fillViewport="true"
+        android:layout_height="2000dp"-->
+        <LinearLayout
+            android:id="@+id/frmResult"
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+        </LinearLayout>
+    <!--/ScrollView-->
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
