upgrade to use AndroidStudio 2.1.2

--- a/VisionDemo/app/src/main/res/layout/activity_main.xml
+++ b/VisionDemo/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,23 @@
         android:layout_alignParentLeft="true"/>
 
     <ImageView
+        android:id="@+id/imgQRScan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/qrscan"
+        android:onClick="onScan"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:id="@+id/tvUserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textIsSelectable="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/imgQRScan"/>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/results"
