--- a/PerimetryPro/app/src/main/res/layout/activity_main.xml
+++ b/PerimetryPro/app/src/main/res/layout/activity_main.xml
@@ -71,11 +71,21 @@ tools:context=".activity.MainActivity">
     android:id="@+id/tvDemo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
+<TextView
+        android:layout_alignBaseline="@id/tvDemo"
+        android:layout_toRightOf="@id/tvDemo"
+        android:paddingLeft="10dp"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold|italic"
+        android:id="@+id/tvDeviceId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@mipmap/configuration"
+    android:id="@+id/imgConfig"
     android:onClick="onConfig"
     android:layout_alignParentBottom="true"
     android:paddingLeft="30dp"
@@ -86,6 +96,7 @@ tools:context=".activity.MainActivity">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@mipmap/results"
+    android:id="@+id/imgResult"
     android:onClick="onResult"
     android:layout_alignParentBottom="true"
     android:paddingRight="30dp"
