show displayDB in corner

--- a/PerimetryPro/app/src/main/res/layout/activity_signin.xml
+++ b/PerimetryPro/app/src/main/res/layout/activity_signin.xml
@@ -7,11 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#303030"
     tools:context="com.tongchuang.perimetrypro.activity.SigninActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@android:color/white"
         android:text="系统准备中。。。"/>
 </RelativeLayout>
