--- a/PerimetryPro/app/src/main/res/layout/activity_exam.xml
+++ b/PerimetryPro/app/src/main/res/layout/activity_exam.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context=".activity.ExamActivity">
 
     <FrameLayout
-        android:id="@+id/frmRun"
-        android:layout_width="fill_parent"
+        android:id="@+id/frmLeft"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"></FrameLayout>
 
-</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/frmRight"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"></FrameLayout>
+
+</LinearLayout>
